# BazCryptLIB

./: .travis.yml  BazCryptCLI.cpp  BazCryptLIB.h  BazCryptLIB.sln  CMakeLists.txt  CMakeSettings.json  README.md
BazCryptCLI/: BazCryptCLI.cpp  BazCryptCLI.h  BazCryptCLI.vcxproj  BazCryptCLI.vcxproj.filters  CMakeLists.txt
BazCryptLIB/: BazCryptLIB.cpp  BazCryptLIB.h  BazCryptLIB.vcxproj  BazCryptLIB.vcxproj.filters  CMakeLists.txt  ReadMe.txt  stdafx.cpp
BazCryptLIB/BazCryptLIB/ConsoleApplication1/: ConsoleApplication1.sln
BazCryptLIB/BazCryptLIB/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj  Source.cpp
BazCryptLIB/BazCryptLIB/Koineks/: Koineks.sln
BazCryptLIB/BazCryptLIB/Koineks/Koineks/: ALMACA.Designer.cs  ALMACA.cs  Borsa.Designer.cs  Borsa.cs  Charts.Designer.cs  Charts.cs  Form1.Designer.cs  Form1.cs  GecmisKontrol.Designer.cs  GecmisKontrol.cs  GenelBorsa.Designer.cs  GenelBorsa.cs  Girdi.Designer.cs  Girdi.cs  Kaydet.Designer.cs  Kaydet.cs  Koineks.csproj  Kullanici.cs  Program.cs  Sistem.cs  YatirimControl.Designer.cs  YatirimControl.cs  packages.config
BazCryptLIB/BazCryptLIB/Koineks/Koineks/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
BazCryptLIB/BazCryptLIB/KoineksAPP/: KoineksAPP.sln
BazCryptLIB/BazCryptLIB/KoineksAPP/KoineksAPP/: App.xaml  App.xaml.cs  KoineksAPP.csproj  MainWindow.xaml  MainWindow.xaml.cs
BazCryptLIB/BazCryptLIB/KoineksAPP/KoineksAPP/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
BazCryptLIB/Release32/BazCryptLIB.tlog/: BazCryptLIB.lastbuildstate  BazCryptLIB.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
BazCryptLIBTest/: BazCryptLIBTest.vcxproj  clitest.cpp  small.txt  test.cpp
Release32/: BazCryptLIB.exp  BazCryptLIB.iobj  BazCryptLIB.ipdb  BazCryptLIB.lib
TestLib/: CLITest.cpp  CMakeLists.txt  LIBTest.cpp  TestLib.rc  TestLib.vcxproj  resource.h
